# niriswitcher

./: LICENSE  README.md  niriswitcher.spec  pyproject.toml
.github/workflows/: workflow.yml
resources/: style.css
src/niriswitcher/: __init__.py  _anim.py  _app.py  _config.py  _widgets.py  _wm.py
src/niriswitcher/resources/: style-dark.css  style.css
