[project]
name = "niriswitcher"
version = "0.6.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Isak Samsten", email = "isak@samsten.se" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
niriswitcher = "niriswitcher:daemon"
niriswitcherctl = "niriswitcher:control"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
